Don't use 'new Integer', use Integer.valueOf, since this lets the Integer class cache values.
git-svn-id: https://svn.code.sf.net/p/vassalengine/svn/VASSAL-src/trunk@8660 67b53d14-2c14-4ace-a08f-0dab2b34000c