@@ -815,9 +815,9 @@ public class Embellishment0 extends Decorator implements TranslatablePiece {
       private JPanel controls;
       private List<String> names;
       private List<Integer> isPrefix;
-      private static final Integer NEITHER = new Integer(0);
-      private static final Integer PREFIX = new Integer(1);
-      private static final Integer SUFFIX = new Integer(2);
+      private static final Integer NEITHER = Integer.valueOf(0);
+      private static final Integer PREFIX = Integer.valueOf(1);
+      private static final Integer SUFFIX = Integer.valueOf(2);
       // random layers
       private HotKeyConfigurer rndKeyConfig;
 
@@ -1240,13 +1240,13 @@ public class Embellishment0 extends Decorator implements TranslatablePiece {
 
         activateKeyInput.setText(e.activateKey);
         activateCommand.setText(e.activateCommand);
-        activateModifiers.setValue(new Integer(e.activateModifiers));
+        activateModifiers.setValue(Integer.valueOf(e.activateModifiers));
         upKeyInput.setText(e.upKey);
         upCommand.setText(e.upCommand);
-        upModifiers.setValue(new Integer(e.upModifiers));
+        upModifiers.setValue(Integer.valueOf(e.upModifiers));
         downKeyInput.setText(e.downKey);
         downCommand.setText(e.downCommand);
-        downModifiers.setValue(new Integer(e.downModifiers));
+        downModifiers.setValue(Integer.valueOf(e.downModifiers));
         resetKey.setValue(e.resetKey);
         resetCommand.setText(e.resetCommand);
         resetLevel.setText(e.resetLevel.getFormat());
